# deepfusion

./: .gitignore  pyproject.toml
logs/tri_cdr-3D_CNN/version_0/: events.out.tfevents.1756998077.pop-desktop.15714.0  hparams.yaml
scripts/: check_dups.py  check_npz.py  crop_nifti.py  get_nifti_shape.py  scan_brain_extents.py  test_mask_alignment.py  test_mmep.py  uncompress_np.py
src/datamodules/: dti_datamodule.py
src/datasets/: dti_dataset.py
src/deepfusion/: datamodules.py  datasets.py
src/deepfusion/(old)datamodules/: ae_datamodule.py  dti_datamodule.py
src/deepfusion/(old)datasets/: dti_dataset.py
src/deepfusion/cli/: finetune_transformer.py  pretrain_autoencoder.py  pretrain_transformer.py  run_autoencoder.py  run_baseline.py  test.py  train.py  train_ae.py  train_baseline.py  train_tf.py
src/deepfusion/configs/: test.yaml  train.yaml
src/deepfusion/datamodules/: ae_datamodule.py  deepfusion_datamodule.py  dti_datamodule.py
src/deepfusion/datasets/: ae_dataset.py  deepfusion_dataset.py  dti_dataset.py
src/deepfusion/models/: 3dcnn.py  autoencoder.py  autoencoders.py  baselines.py  blocks.py  blocksv2.py  decoders.py  deepfusion.py  deepfusion_experimental.py  encoders.py  incremental.py  resnet3d10.py  test.py  transformer.py  wrappers.py
src/deepfusion/preprocess/: dwi.py  latents.py  maps.py  preprocess_dwi.py
src/deepfusion/utils/: collate.py  evaluation.py  finetuner.py  labels.py  losses.py  masking.py  sampler.py  samplers.py  (+1 more)
src/models/: 3D_CNN.py
src/preprocess/: preprocess_dwi.py
src/utils/: labels.py  sampler.py
(+21 files in other folders)
